--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=8080
 
-MONGO_DB_URL=
+MONGO_DB_URL=mongodb+srv://thachhoang767676:k8gmKY5VfYZGVurR@cluster0.2v34y.mongodb.net/jwtnodejs
