Step 6 - learn about jwt

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=8080
 
 MONGO_DB_URL=mongodb+srv://thachhoang767676:k8gmKY5VfYZGVurR@cluster0.2v34y.mongodb.net/jwtnodejs
+
+JWT_SECRET=3131635b-b657-459b-b1ff-0718e237b5af
+JWT_EXPIRE=1d
