--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend-nodejs-hoidanit",
+  "name": "backend-nodejs-thachdev",
   "version": "1.0.0",
   "description": "Backend nodejs",
   "main": "server.js",
@@ -13,18 +13,20 @@
     "react"
   ],
   "author": {
-    "name": "Hỏi Dân IT",
-    "url": "https://hoidanit.vn"
+    "name": "Thach Dev",
+    "url": "https://thachdev.vn"
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "5.1.1",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "ejs": "3.1.10",
-    "express": "4.19.2",
+    "express": "^4.19.2",
     "jsonwebtoken": "9.0.2",
-    "mongoose": "8.4.4"
+    "mongoose": "8.4.4",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "3.1.4"
