add api upload video

--- a/.env
+++ b/.env
@@ -1,9 +1,20 @@
 NODE_ENV=development
 PORT=8080
 
+# MongoDB
 MONGO_DB_URL=mongodb+srv://thachhoang767676:k8gmKY5VfYZGVurR@cluster0.2v34y.mongodb.net/jwtnodejs
 
+# JWT node
 JWT_SECRET=3131635b-b657-459b-b1ff-0718e237b5af
 JWT_EXPIRE=1d
 
-Client_ID_IMGUR=646698b4344983d
+# Imgur
+IMGUR_CLIENT_ID=646698b4344983d
+
+# YouTube API
+YOUTUBE_CLIENT_ID=317978892746-jvbb6av03p8r1vg40vgnerls2mqc2j3u.apps.googleusercontent.com
+YOUTUBE_CLIENT_SECRET=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
+YOUTUBE_REDIRECT_URI=http://localhost:5173/oauth2callback
+
+# You need to generate the refresh token using OAuth2 flow, this is just a placeholder
+YOUTUBE_REFRESH_TOKEN=YOUR_YOUTUBE_REFRESH_TOKEN
