--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "16.4.5",
     "ejs": "3.1.10",
     "express": "^4.19.2",
+    "googleapis": "^144.0.0",
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.4.4",
     "multer": "^1.4.5-lts.1"
